[metadata]
name = sandcastle
url = https://github.com/packit-service/sandcastle
description = Run untrusted commands in a sandbox.
long_description = file: README.md
long_description_content_type = text/markdown
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development
    Topic :: Utilities
keywords =
    openshift
    sandbox


[options]
packages = find:
python_requires = >=3.6
include_package_data = True

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

install_requires =
    # kube version 9 has different API than 8
    kubernetes<9

[options.packages.find]
exclude =
    tests*
