[metadata]
name = sandcastle
description = Run untrusted commands in a sandbox.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/packit-service/sandcastle
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Utilities
keywords =
    openshift
    sandbox

[options]
packages = find:
install_requires =
    # kube client changes API b/w major versions and we're on 12 now
    kubernetes==12.0.1
python_requires = >=3.6
include_package_data = True
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

[options.packages.find]
exclude =
    tests*
